--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_core:
   geolocator: ^6.1.1
   http: ^0.12.2
+  sentiment_dart: ^0.0.4
 dev_dependencies:
   # pedantic: ^1.9.0
   # build_runner: ^1.10.0
