--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   geolocator: ^6.1.1
   http: ^0.12.2
   sentiment_dart: ^0.0.4
+  tflite_flutter:
 dev_dependencies:
   # pedantic: ^1.9.0
   # build_runner: ^1.10.0
@@ -74,6 +75,7 @@ flutter:
     - images/workforce.png
     - images/send.png
     - images/car.jpg
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
