Working on customer_home.dart and place_order.dart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   path_provider:
   path:
   carousel_slider: ^2.3.1
+  getwidget: 
 dev_dependencies:
   # pedantic: ^1.9.0
   # build_runner: ^1.10.0
@@ -82,6 +83,12 @@ flutter:
     - images/car.jpg
     - images/home_page_background_image.jpg
     - images/
+    - images/customer_home/carpenter.jpg
+    - images/customer_home/electrician.jpg
+    - images/customer_home/mechanic.jpg
+    - images/customer_home/plumber.jpg
+    - images/customer_home/sofa_cleaning.jpg
+    - images/customer_home/women_hair_cut_and_styling.jpg
     - assets/
     - assets/labels.txt
     - assets/mobilenet_v1_1.0_224_quant.tflite
