--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ flutter:
     - images/customer_home/plumber.jpg
     - images/customer_home/sofa_cleaning.jpg
     - images/customer_home/women_hair_cut_and_styling.jpg
+    - images/customer_home/contact_us.jpg
     - assets/
     - assets/labels.txt
     - assets/mobilenet_v1_1.0_224_quant.tflite
