--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,7 @@ flutter:
     - images/customer_home/women_hair_cut_and_styling.jpg
     - images/customer_home/contact_us.jpg
     - assets/
+    - images/recommended.jpg
     - assets/labels.txt
     - assets/mobilenet_v1_1.0_224_quant.tflite
 
