--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   path:
   carousel_slider: ^2.3.1
   getwidget: 
+  flutter_screenutil: ^0.4.2
 dev_dependencies:
   # pedantic: ^1.9.0
   # build_runner: ^1.10.0
