Added navbar and changed icons

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,11 +60,19 @@ dependencies:
   carousel_slider: ^2.3.1
   getwidget: 
   flutter_screenutil: ^0.4.2
+  flutter_launcher_icons: 
+  ff_navigation_bar: 
 dev_dependencies:
   # pedantic: ^1.9.0
   # build_runner: ^1.10.0
   flutter_test:
     sdk: flutter
+
+
+flutter_icons:
+  android: true #"launcher_icon"
+  ios: true
+  image_path: images/workforce.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
