--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - images/sales/1.jpg
+    - images/sales/2.jpg
+    - images/sales/3.jpg
+    - images/sales/4.jpg
+    - images/sales/5.jpg
+    - images/sales/6.jpg
     - images/workforce.png
     - images/send.png
     - images/car.jpg
