Altered UI of some files

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,7 +94,7 @@ flutter:
     - images/preventive_measures/cover_nose_and_mouth_with_mask.PNG
     - images/preventive_measures/isolation.jpg
     - images/sales/1.jpg
-    - images/sales/2.jpg
+    - images/sales/2.PNG
     - images/sales/3.jpg
     - images/sales/4.jpg
     - images/sales/5.jpg
